--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>{
-        background-color: #000000;
-    }
+    <style>
+        background {
+        color: black;
+        }
+    
 
     h1 {
         font-family: Arial, Helvetica, sans-serif;
