--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <style>
-        background {
-        color: black;
+        body {
+        background-color: black;
         }
     
 
     h1 {
-        font-family: Arial, Helvetica, sans-serif;
-        color: blueviolet;
+        font-family:sans-serif;
+        color:fuchsia;
     }
     </style>
     <meta charset="UTF-8">
